DZ три числа близкие к сумме и палочки